k8s/argo-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-load-balancer
  namespace: argocd
spec:
  type: LoadBalancer
  ports:
  - port: 443
    name: load-balancer-port-ssl
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
